🐼🎤 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!-- Unit 6 Project
 Requirements
-[  ] three different shapes
-[  ] three different RGB colors
-[  ] three comments 
-[  ] three new HTML elements 
+[ yes ] three different shapes
+[ yes ] three different RGB colors
+[ yes ] three comments 
+[ yes ] three new HTML elements 
 
 Select ONE Additional 
-[ no ] Feature 1 - three different strokeWeight() commands
+[ yes ] Feature 1 - three different strokeWeight() commands
 [ no ] Feature 2 - Add a second <canvas>
 [ no ] Feature 3 - Change Tab Title & Image
 [ no ] Feature 4 - Typewriter Animation
@@ -23,20 +23,38 @@ Select ONE Additional
     <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.6/processing.min.js"></script>
     <style></style>
   </head>
-
   <body>
+    <center>
+      <h1>The Duck Song But There's a Twist</h1>
+    </center>
     <div class="container">
       <div>
-        <h2 id="start">How it started.</h2>
+        <h2 id="start">
+          Dude. There are NO grapes at that lemonade stand. Just give up
+          already-
+        </h2>
         <img
-          class="pic" src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c7/Chill_guy_original_artwork.jpg/220px-Chill_guy_original_artwork.jpg"
+          class="pic"
+          src="https://m.media-amazon.com/images/M/MV5BYzI1MDk0NTktNTk4NC00MDhiLWE4NmEtODI0ZDY0ZTQ0MjQ3XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"
         />
       </div>
       <div>
-        <h2 id="end">How it ended.</h2>
+        <h2 id="end">
+          Wait what!? I swear, a lemonade stand was just there...
+        </h2>
         <canvas id="myCanvas" data-processing-sources="myP5Code.pde"> </canvas>
       </div>
     </div>
+    <iframe
+      width="530"
+      height="300"
+      src="https://www.youtube.com/embed/MtN1YnoL46Q?si=LqU-PN-FWrce0ngF"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin"
+      allowfullscreen
+    ></iframe>
   </body>
 </html>
 
